--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "dexie": "^2.0.4",
     "dotenv": "^8.0.0",
+    "foxcasts-core": "^0.1.0",
     "history": "^4.9.0",
     "preact": "^10.0.0-beta.2",
     "preact-async-route": "^2.2.1",
