--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "dependencies": {
     "dotenv": "^8.0.0",
-    "foxcasts-core": "^0.1.0",
+    "foxcasts-core": "github:garredow/foxcasts-core#semver:^1.0.0",
     "history": "^4.9.0",
     "preact": "^10.0.0-rc.0",
     "preact-async-route": "^2.2.1",
