--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "per-env",
     "start:production": "npm run -s serve",
     "start:development": "npm run -s dev",
-    "build": "preact build",
-    "build:analyze": "preact build --json",
-    "build:kaios": "preact build && cp ./manifest.webapp ./build",
+    "build": "preact build --no-prerender",
+    "build:analyze": "preact build --no-prerender --json",
+    "build:kaios": "preact build --no-prerender && cp ./manifest.webapp ./build",
     "serve": "preact build && preact serve",
     "dev": "preact watch",
     "lint": "tslint --project .",
@@ -42,25 +42,25 @@
     "jest": "^23.6.0",
     "lint-staged": "^8.1.0",
     "per-env": "^1.0.2",
-    "preact-cli": "^3.0.0-next.19",
+    "preact-cli": "^3.0.0-rc.6",
     "preact-render-spy": "^1.3.0",
     "prettier": "^1.15.3",
     "ts-jest": "^23.10.5",
     "ts-loader": "^3.5.0",
-    "tslint": "^5.11.0",
+    "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.17.0",
-    "tslint-consistent-codestyle": "^1.14.1",
+    "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.2.1",
+    "typescript": "^3.6.4",
     "typings-for-css-modules-loader": "^1.7.0",
-    "webpack-bundle-analyzer": "^3.3.2"
+    "webpack-bundle-analyzer": "^3.5.2"
   },
   "dependencies": {
     "dotenv": "^8.0.0",
     "foxcasts-core": "github:garredow/foxcasts-core#semver:^1.0.0",
-    "history": "^4.9.0",
-    "preact": "^10.0.0-rc.0",
+    "history": "^4.10.1",
+    "preact": "^10.0.0",
     "preact-async-route": "^2.2.1",
     "preact-compat": "^3.18.4",
     "preact-router": "^3.0.0"
