--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#fff",
-  "theme_color": "#673ab8",
+  "theme_color": "#D04A11",
   "icons": [
     {
       "src": "/assets/icons/android-chrome-192x192.png",
