--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "preact build --no-prerender",
+    "build": "preact build --no-prerender --no-sw",
     "serve": "sirv build --port 8080 --cors --single",
-    "build:dev": "preact build --no-prerender --no-inline-css && cp ./manifest.webapp ./build/manifest.webapp",
+    "build:dev": "preact build --no-prerender --no-inline-css --no-sw && cp ./manifest.webapp ./build/manifest.webapp",
     "build:analyze": "preact build --no-prerender --json",
     "build:package": "node build.mjs",
     "build:deploy": " node build.mjs --deploy",
