--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     ]
   },
   "dependencies": {
+    "browser-image-compression": "^1.0.15",
     "dexie": "^3.0.3",
     "preact": "^10.3.1",
     "preact-render-to-string": "^5.1.4",
