--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "browser-image-compression": "^1.0.15",
     "dexie": "^3.0.3",
     "foxcasts-core": "^1.2.0",
+    "node-vibrant": "^3.1.3",
     "preact": "^10.3.1",
     "preact-render-to-string": "^5.1.4",
     "preact-router": "^3.2.1"
