--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "node-vibrant": "^3.1.3",
     "preact": "^10.3.1",
     "preact-render-to-string": "^5.1.4",
-    "preact-router": "^3.2.1"
+    "preact-router": "^3.2.1",
+    "xml-formatter": "^2.4.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.21",
