--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   "dependencies": {
     "browser-image-compression": "^1.0.15",
     "dexie": "^3.0.3",
-    "foxcasts-core": "^1.2.0",
+    "dexie-observable": "^3.0.0-beta.11",
+    "foxcasts-core": "^1.3.0",
     "node-vibrant": "^3.1.3",
     "preact": "^10.3.1",
     "preact-render-to-string": "^5.1.4",
     "preact-router": "^3.2.1",
+    "rxjs": "^7.4.0",
     "xml-formatter": "^2.4.1"
   },
   "devDependencies": {
@@ -50,7 +52,7 @@
     "jest-preset-preact": "^4.0.2",
     "preact-cli": "^3.0.0",
     "sirv-cli": "^1.0.0-next.3",
-    "typescript": "^3.7.5"
+    "typescript": "^4.4.3"
   },
   "jest": {
     "preset": "jest-preset-preact",
