--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "browser-image-compression": "^1.0.15",
     "dexie": "^3.0.3",
     "dexie-observable": "^3.0.0-beta.11",
-    "foxcasts-core": "^1.3.0",
+    "foxcasts-core": "1.3.0",
     "node-vibrant": "^3.1.3",
     "preact": "^10.3.1",
     "preact-render-to-string": "^5.1.4",
