--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dexie": "^3.0.3",
     "dexie-observable": "^3.0.0-beta.11",
     "foxcasts-core": "^1.5.0",
+    "lodash.kebabcase": "^4.1.1",
     "preact": "^10.3.1",
     "preact-render-to-string": "^5.1.4",
     "preact-router": "^3.2.1",
@@ -48,6 +49,7 @@
     "@types/chai": "^4.2.21",
     "@types/enzyme": "^3.10.5",
     "@types/jest": "^26.0.8",
+    "@types/lodash.kebabcase": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "archiver": "^5.3.0",
