--- a/package.json
+++ b/package.json
@@ -4,13 +4,9 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "preact build --no-prerender --no-sw --no-esm",
-    "serve": "sirv build --port 8080 --cors --single",
-    "build:dev": "preact build --no-prerender --no-inline-css --no-sw --no-esm && cp ./manifest.webapp ./build/manifest.webapp",
-    "build:analyze": "preact build --no-prerender --no-esm --json",
-    "build:package": "node build.mjs",
-    "build:deploy": " node build.mjs --deploy",
-    "dev": "HTTPS=true preact watch --https --no-sw",
+    "start": "HTTPS=true preact watch --https --no-sw",
+    "build": "preact build --no-prerender --no-inline-css --no-sw --no-esm && cp ./manifest.webapp ./build/manifest.webapp",
+    "build:analyze": "preact build --no-prerender --no-inline-css --no-sw --no-esm --json",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "test": "jest ./tests"
   },
