--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "date-fns": "^2.25.0",
     "dexie": "^3.0.3",
     "dexie-observable": "^3.0.0-beta.11",
-    "foxcasts-core": "^2.0.0",
+    "foxcasts-core": "2.1.0",
     "lodash.kebabcase": "^4.1.1",
     "preact": "^10.3.1",
     "preact-render-to-string": "^5.1.4",
