--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "date-fns": "^2.25.0",
-    "foxcasts-core": "2.1.0",
+    "foxcasts-core": "^3.0.0",
     "lodash.kebabcase": "^4.1.1",
     "mai-ui": "^0.2.0",
     "preact": "^10.3.1",
