--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "test": "jest ./tests"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/garredow/foxcasts-lite.git"
+  },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
     "extends": [
