--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build": "preact build --no-prerender --no-inline-css --no-sw --no-esm && cp ./manifest.webapp ./build/manifest.webapp",
     "build:analyze": "preact build --no-prerender --no-inline-css --no-sw --no-esm --json",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "test": "jest ./tests"
+    "test": "jest ./tests",
+    "commit": "cz"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/garredow/foxcasts-lite.git"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
@@ -40,6 +45,9 @@
     "xml-formatter": "^2.4.1"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/exec": "^6.0.2",
+    "@semantic-release/git": "^10.0.1",
     "@types/chai": "^4.2.21",
     "@types/enzyme": "^3.10.5",
     "@types/jest": "^26.0.8",
@@ -48,6 +56,8 @@
     "@typescript-eslint/parser": "^2.25.0",
     "archiver": "^5.3.0",
     "chai": "^4.3.4",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-preact-pure": "^3.1.0",
     "eslint": "^6.8.0",
@@ -55,6 +65,7 @@
     "jest": "^26.2.2",
     "jest-preset-preact": "^4.0.2",
     "preact-cli": "^3.0.0",
+    "semantic-release": "^18.0.0",
     "sirv-cli": "^1.0.0-next.3",
     "typescript": "^4.4.3"
   },
@@ -69,5 +80,10 @@
     "Kaios 2.5",
     "Firefox 48",
     "Chrome 90"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
