fix: persist build dir

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,10 @@ jobs:
       - attach_workspace:
           at: .
       - run: npm run build
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - ./*
   version-and-publish:
     executor: node-lts
     steps:
